--- a/bootstrap/src/main/resources/org/soluvas/web/bootstrap/NotifyPanel.html
+++ b/bootstrap/src/main/resources/org/soluvas/web/bootstrap/NotifyPanel.html
@@ -3,7 +3,7 @@
 
 <!-- set the container hidden to avoid a flash of unstyled content
 	when the page first loads -->
-<div id="notify-container" style="display:block; margin-top: 60px">
+<div id="notify-container" style="display: none; margin-top: 60px">
     <!--
     Later on, you can choose which template to use by referring to the
     ID assigned to each template.  Alternatively, you could refer
