--- a/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BootstrapPage_metros.html
+++ b/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BootstrapPage_metros.html
@@ -59,7 +59,7 @@ var subscriptions = [];
 			Navbar... (see Navbar.html)
 	</div>
 	<div class="clearfix"></div>
-	<div class="container" style="position: relative; top: 130px;">
+	<div class="container">
 <!-- 		    <ul class="breadcrumb"> -->
 <!-- 			    <li><a href="#">Home</a> <span class="divider">/</span></li> -->
 <!-- 			    <li><a href="#">Library</a> <span class="divider">/</span></li> -->
