styling berbatik footer and newsletter

--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BackendPage.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BackendPage.html
@@ -68,7 +68,7 @@ var subscriptions = [];
 			Navbar... (see Navbar.html)
 	</div>
 	<div class="clearfix"></div>
-	<div class="container marginContent">
+	<div class="container">
 <!-- 		    <ul class="breadcrumb"> -->
 <!-- 			    <li><a href="#">Home</a> <span class="divider">/</span></li> -->
 <!-- 			    <li><a href="#">Library</a> <span class="divider">/</span></li> -->
