--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage.html
@@ -17,7 +17,7 @@
 	<style type="text/css">
       body {
 /*         padding-top: 60px; */
-        padding-bottom: 40px;
+        padding-bottom: 10px;
       }
 /*       .sidebar-nav { */
 /*         padding: 9px 0; */
@@ -59,7 +59,7 @@ var subscriptions = [];
 			Navbar... (see Navbar.html)
 	</div>
 	<div class="clearfix"></div>
-	<div class="container" style="position: relative; top: 80px;">
+	<div class="container">
 <!-- 		    <ul class="breadcrumb"> -->
 <!-- 			    <li><a href="#">Home</a> <span class="divider">/</span></li> -->
 <!-- 			    <li><a href="#">Library</a> <span class="divider">/</span></li> -->
@@ -84,11 +84,11 @@ var subscriptions = [];
 					</wicket:child>
 				</div>
 			</div><!--/row-->
-			<hr>
-			<footer class="footer" wicket:id="footer">
-				<small style="color: #808080;"> &middot; &copy; <a href="http://www.soluvas.com/">Soluvas</a> 2012</small>
-			</footer>
 	</div><!--/.fluid-container-->
+	<div class="clearfix"></div>
+	<footer class="footer" wicket:id="footer">
+		<small style="color: #808080;"> &middot; &copy; <a href="http://www.soluvas.com/">Soluvas</a> 2012</small>
+	</footer>
 
 	<div wicket:id="beforeFooterJs">[beforeFooterJs]</div>
  	
