Fixed for drop-down choice bootstrap on backend.page

--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BackendPage.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BackendPage.html
@@ -53,6 +53,7 @@
 	<script>define('bootstrap/bootstrap-transition',[],function(){});</script>
 	<script>define('bootstrap/bootstrap-modal',[],function(){});</script>
 	<script>define('bootstrap',[],function(){});</script>
+	<script>define('bootstrap/bootstrap-dropdown',[],function(){});</script>
 
 <script>
 // TODO: refactor push support (both XHR or StompWeb-powered) to separate AMD module
