home page styling

--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_metros.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_metros.html
@@ -71,6 +71,43 @@ var subscriptions = [];
 				</div><!--/span-->
 				
 				<div class="span9" wicket:id="contentColumn">
+					<div class="InfoHeader">
+						<div class="breadcrumb subnav">
+						    <ul class="inline"> 
+                             	 <li class="home">
+				                	<a title="Go to Home Page" href="http://bootstrapped.magenthon.com/">
+				                		<img height="60" width="150" alt="Stok Terakhir, Klik!" src="http://www.pinkemma.com/icon/menu-icons/laststock-icon.jpg">
+				                	</a>
+			               		</li>
+			               		<li class="home">
+				                	<a title="Go to Home Page" href="http://bootstrapped.magenthon.com/">
+				                		<img height="60" width="150" alt="Stok Terakhir, Klik!" src="http://www.pinkemma.com/icon/ship-free-icon.png">
+				                	</a>
+			               		</li>
+			               		<li class="home">
+				                	<a title="Go to Home Page" href="http://bootstrapped.magenthon.com/">
+				                		<img height="60" width="150" alt="Stok Terakhir, Klik!" src="http://www.pinkemma.com/icon/menu-icons/favorite-icon.jpg">
+				                	</a>
+			               		</li>
+			               		<li class="home">
+				                	<a title="Go to Home Page" href="http://bootstrapped.magenthon.com/">
+				                		<img height="60" width="150" alt="Stok Terakhir, Klik!" src="http://www.pinkemma.com/icon/contact-icon-sms.png">
+				                	</a>
+			               		</li>
+			               		<li class="home">
+				                	<a title="Go to Home Page" href="http://bootstrapped.magenthon.com/">
+				                		<img height="60" width="150" alt="Stok Terakhir, Klik!" src="http://www.pinkemma.com/icon/whatsapp-icon.png">
+				                	</a>
+			               		</li>
+			               		<li class="home">
+				                	<a title="Go to Home Page" href="http://bootstrapped.magenthon.com/">
+				                		<img height="60" width="150" alt="Stok Terakhir, Klik!" src="http://www.pinkemma.com/icon/whatsapp-icon.png">
+				                	</a>
+			               		</li>
+						    </ul>
+						    
+						</div>
+					</div>
 					<div wicket:id="afterHeader" class="afterHeader">
 							<!-- 		Carousel Images is loading.. -->
 					</div>
