home page styling

--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_metros.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_metros.html
@@ -73,14 +73,14 @@ var subscriptions = [];
 				<div class="span9" wicket:id="contentColumn">
 					<div class="InfoHeader">
 						<div class="breadcrumb subnav">
-						    <ul class="inline"> 
+						    <ul class="inline" style="margin:0;"> 
                              	 <li class="home">
-				                	<a title="Go to Home Page" href="http://bootstrapped.magenthon.com/">
+				                	<a title="Go to Home Page" href="">
 				                		<img height="60" width="150" alt="Stok Terakhir, Klik!" src="http://www.pinkemma.com/icon/menu-icons/laststock-icon.jpg">
 				                	</a>
 			               		</li>
 			               		<li class="home">
-				                	<a title="Go to Home Page" href="http://bootstrapped.magenthon.com/">
+				                	<a title="Go to Home Page" href="">
 				                		<img height="60" width="150" alt="Stok Terakhir, Klik!" src="http://www.pinkemma.com/icon/ship-free-icon.png">
 				                	</a>
 			               		</li>
@@ -90,17 +90,17 @@ var subscriptions = [];
 				                	</a>
 			               		</li>
 			               		<li class="home">
-				                	<a title="Go to Home Page" href="http://bootstrapped.magenthon.com/">
+				                	<a title="Go to Home Page" href="">
 				                		<img height="60" width="150" alt="Stok Terakhir, Klik!" src="http://www.pinkemma.com/icon/contact-icon-sms.png">
 				                	</a>
 			               		</li>
 			               		<li class="home">
-				                	<a title="Go to Home Page" href="http://bootstrapped.magenthon.com/">
+				                	<a title="Go to Home Page" href="">
 				                		<img height="60" width="150" alt="Stok Terakhir, Klik!" src="http://www.pinkemma.com/icon/whatsapp-icon.png">
 				                	</a>
 			               		</li>
 			               		<li class="home">
-				                	<a title="Go to Home Page" href="http://bootstrapped.magenthon.com/">
+				                	<a title="Go to Home Page" href="">
 				                		<img height="60" width="150" alt="Stok Terakhir, Klik!" src="http://www.pinkemma.com/icon/whatsapp-icon.png">
 				                	</a>
 			               		</li>
