--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/term/TermDetailPanel.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/term/TermDetailPanel.html
@@ -37,10 +37,9 @@
 				</div>
 			</div>
 		</form>
-		<div class="btn-toolbar">
-			<a wicket:id="backLink" href="#" class="btn">« Back to List</a>
-			<button wicket:id="saveBtn" class="btn btn-primary"><i class="icon-ok icon-white"></i> Save</button>
-		</div>
+		<a wicket:id="backLink" href="#" class="btn">« Back to List</a>
+		<button wicket:id="saveBtn" class="btn btn-primary"><i class="icon-ok icon-white"></i> Save</button>
+		<button wicket:id="deleteBtn" class="btn btn-danger"><i class="icon-remove icon-white"></i> Delete</button>
 	</div>
 </div>
 </wicket:panel>
