--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_fluid.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_fluid.html
@@ -59,7 +59,7 @@ var subscriptions = [];
 			Navbar... (see Navbar.html)
 	</div>
 	<div class="clearfix"></div>
-		<div class="container-fluid" style="position: relative; top: 70px;">
+		<div class="container-fluid">
 <!-- 		    <ul class="breadcrumb"> -->
 <!-- 			    <li><a href="#">Home</a> <span class="divider">/</span></li> -->
 <!-- 			    <li><a href="#">Library</a> <span class="divider">/</span></li> -->
