--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/term/TermDetailPanel.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/term/TermDetailPanel.html
@@ -7,51 +7,56 @@
 	height: 1.8em;
 	vertical-align: bottom;
 }
-</style>
+</style>	
 </wicket:head>
 <wicket:panel>
-<div class="row">
-	<div class="span9">
-		<div class="page-header">
-			<h1><span wicket:id="kind">Colors</span> &gt; <span wicket:id="termUName">base_red</span></h1>
-		</div>
-		<div class="alert alert-info">
-			Only custom terms (with namespace other than <tt>base</tt>) are editable.
-		</div>
-		<form wicket:id="form" class="form form-horizontal">
-			<div class="control-group">
-				<label class="control-label" wicket:for="name"><abbr title="(Underscored) Unique Name">UName</abbr> *</label>	
-				<div class="controls">
-					<div class="input-prepend">
-						<span class="add-on" wicket:id="nsPrefix"></span>
-						<input type="text" wicket:id="name"/>
+	<div class="row">
+		<div class="box span9" style="margin-top:0;">
+			<div class="box-header well">
+					<span wicket:id="kind">Colors</span> &gt; <span wicket:id="termUName">base_red</span>
+			</div>
+			<div class="box-content">
+				<form wicket:id="form" class="form form-horizontal">
+					<div class="control-group">
+						<label class="control-label" wicket:for="name"><abbr title="(Underscored) Unique Name">UName</abbr> *</label>	
+						<div class="controls">
+							<div class="input-prepend">
+								<span class="add-on" wicket:id="nsPrefix"></span>
+								<input type="text" wicket:id="name"/>
+							</div>
+						</div>
 					</div>
-				</div>
-			</div>
-			<div class="control-group">
-				<label class="control-label" wicket:for="displayName">Display Name *</label>
+					<div class="control-group">
+						<label class="control-label" wicket:for="displayName">Display Name *</label>
+						<div class="controls">
+							<input type="text" wicket:id="displayName"/>
+						</div>
+					</div>
+					<div class="control-group">
+						<label class="control-label" wicket:for="imageId">Image ID</label>	
+						<div class="controls">
+							<input type="text" wicket:id="imageId"/>
+						</div>
+					</div>
+					<div class="control-group">
+						<label class="control-label" wicket:for="color">HTML Color</label>	
+						<div class="controls">
+							<input type="checkbox" wicket:id="colorUsed"/>
+							<span wicket:id="colorBox" class="color-box" style="background-color: #ff0000">&nbsp;</span>
+							<input type="text" wicket:id="color"/>
+						</div>
+					</div>
+				</form>
+				<hr>
+				<div class="form-horizontal">
 				<div class="controls">
-					<input type="text" wicket:id="displayName"/>
+					<a wicket:id="backLink" href="#" class="btn">« Back to List</a>
+					<button wicket:id="saveBtn" class="btn btn-info"><i class="icon-ok-sign icon-white"></i> Save</button>
+					<button wicket:id="deleteBtn" class="btn btn-danger"><i class="icon-remove-sign icon-white"></i> Delete</button>
 				</div>
-			</div>
-			<div class="control-group">
-				<label class="control-label" wicket:for="imageId">Image ID</label>	
-				<div class="controls">
-					<input type="text" wicket:id="imageId"/>
 				</div>
+				<br/>
 			</div>
-			<div class="control-group">
-				<label class="control-label" wicket:for="color">HTML Color</label>	
-				<div class="controls">
-					<input type="checkbox" wicket:id="colorUsed"/>
-					<span wicket:id="colorBox" class="color-box" style="background-color: #ff0000">&nbsp;</span>
-					<input type="text" wicket:id="color"/>
-				</div>
-			</div>
-		</form>
-		<a wicket:id="backLink" href="#" class="btn">« Back to List</a>
-		<button wicket:id="saveBtn" class="btn btn-primary"><i class="icon-ok icon-white"></i> Save</button>
-		<button wicket:id="deleteBtn" class="btn btn-danger"><i class="icon-remove icon-white"></i> Delete</button>
+		</div>
 	</div>
-</div>
 </wicket:panel>
