--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/term/TermTablePanel.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/term/TermTablePanel.html
@@ -1,18 +1,21 @@
 <wicket:panel>
-<div class="row">
-	<div class="span9">
-		<div class="page-header">
-			<h1 wicket:id="kindDisplayName">Colors</h1>
-		</div>
-		<div class="alert alert-info">
+	<div class="row">
+		<div class="box span9" style="margin-top:0;">
+			<div class="box-header well">
+					<span wicket:id="kindDisplayName">Colors</span>
+			</div>
+			<div class="box-content">
+				<div class="alert alert-info">
 			Only custom terms (with namespace other than <tt>base</tt>) are editable.
+			</div>
+			<div class="btn-toolbar">
+				<a wicket:id="addLink" href="#" class="btn btn-info"><i class="icon-plus-sign icon-white"></i> New</a>
+			</div>
+			<table class="table table-bordered table-striped" wicket:id="table">
+				[table]
+			</table>
+			</div>
 		</div>
-		<div class="btn-toolbar">
-			<a wicket:id="addLink" href="#" class="btn"><i class="icon-plus"></i> New</a>
-		</div>
-		<table class="table table-bordered table-striped" wicket:id="table">
-			[table]
-		</table>
 	</div>
-</div>
 </wicket:panel>
+
