1. Added Info for tenantId

--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_fluid.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_fluid.html
@@ -58,6 +58,10 @@ var subscriptions = [];
 	<div class="" wicket:id="navbar">
 			Navbar... (see Navbar.html)
 	</div>
+	<div class="span12">
+		<div wicket:id="addedInfo">
+		</div>
+ 	</div>
 	<div class="clearfix"></div>
 		<div class="container-fluid">
 <!-- 		    <ul class="breadcrumb"> -->
