--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BackendPage.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BackendPage.html
@@ -68,6 +68,10 @@ var subscriptions = [];
 	<div class="BackendNavbar" wicket:id="navbar">
 			Navbar... (see Navbar.html)
 	</div>
+	<div class="span12">
+		<div wicket:id="addedInfo">
+		</div>
+ 	</div>
 	<div class="clearfix"></div>
 	<div class="container">
 <!-- 		    <ul class="breadcrumb"> -->
