--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_metros.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_metros.html
@@ -58,7 +58,7 @@ var subscriptions = [];
 	<div class="" wicket:id="navbar">
 			Navbar... (see Navbar.html)
 	</div>
-	<div class="span12">
+	<div class="">
 		<div wicket:id="addedInfo">
 		</div>
  	</div>
