product view demo styling

--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_demo.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_demo.html
@@ -16,7 +16,7 @@
 	<link wicket:id="bootstrapCss" href="/static/skin/org.soluvas.web.bootstrap/css/bootstrap.css" rel="stylesheet" />
 	<style type="text/css">
       body {
-		padding-top: 10px;
+/* 		padding-top: 10px; */
         padding-bottom: 10px;
       }
 /*       .sidebar-nav { */
