--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_metros.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_metros.html
@@ -58,7 +58,7 @@ var subscriptions = [];
 	<div class="" wicket:id="navbar">
 			Navbar... (see Navbar.html)
 	</div>
-	<div class="">
+	<div class="container">
 		<div wicket:id="addedInfo">
 		</div>
  	</div>
@@ -88,10 +88,12 @@ var subscriptions = [];
 					</wicket:child>
 				</div>
 			</div><!--/row-->
+				<hr>
+				<footer class="footer" wicket:id="footer">
+					<small style="color: #808080;"> &middot; &copy; <a href="http://www.soluvas.com/">Soluvas</a> 2012</small>
+				</footer>
 	</div><!--/.fluid-container-->
-	<footer class="footer" wicket:id="footer">
-		<small style="color: #808080;"> &middot; &copy; <a href="http://www.soluvas.com/">Soluvas</a> 2012</small>
-	</footer>
+	
 
 	<div wicket:id="beforeFooterJs">[beforeFooterJs]</div>
  	
