--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/widget/PersonPopoverBody.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/widget/PersonPopoverBody.html
@@ -1,3 +1,4 @@
 <wicket:panel>
 <img wicket:id="photo"/> <a wicket:id="profileLink" class="btn" target="_blank"><i class="icon-user"></i> View Profile</a>
+<span class="label label-success" wicket:id="customerRole">Special Agent</span>
 </wicket:panel>
