--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BackendPage.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BackendPage.html
@@ -30,7 +30,8 @@
     </style>	
 	<link wicket:id="bootstrapResponsiveCss" href="/static/skin/org.soluvas.web.bootstrap/css/bootstrap-responsive.css" rel="stylesheet" />
 	<link wicket:id="soluvasCss" href="/static/skin/org.soluvas.web.bootstrap/css/bootstrap-patches.css" rel="stylesheet" />
-
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300italic,400italic,600,600italic' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Crete+Round' rel='stylesheet' type='text/css'>
 	<!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
 	<!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
