--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_metros.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_metros.html
@@ -68,7 +68,6 @@ var subscriptions = [];
 </head>
 
 <body>
-
 	<header wicket:id="header"></header>
 	<div class="" wicket:id="navbar">
 			Navbar... (see Navbar.html)
@@ -104,16 +103,16 @@ var subscriptions = [];
 				</div>
 				 <ul class="styles">
 				  <li><p class="skins">Skins</p></li>
-				  <li class="orange"> <a href="" onclick="setActiveStyleSheet('orange'); return false;"> </a></li>
-				  <li class="blue"> <a href="" onclick="setActiveStyleSheet('blue'); return false;"> </a></li>
-				  <li class="green"> <a href="" onclick="setActiveStyleSheet('green'); return false;"> </a></li>
-				  <li class="pink"> <a href="" onclick="setActiveStyleSheet('pink'); return false;"> </a></li>
+				  <li class="orange"> <a href="" onclick="setActiveStyleSheet('orange'); return false;">Call center</a></li>
+				  <li class="blue"> <a href="" onclick="setActiveStyleSheet('blue'); return false;">Sms center</a></li>
+				  <li class="green"> <a href="" onclick="setActiveStyleSheet('green'); return false;">Blackberry messenger</a></li>
+				  <li class="pink"> <a href="" onclick="setActiveStyleSheet('pink'); return false;">Yahoo messenger</a></li>
 				  <li class="purple"> <a href="" onclick="setActiveStyleSheet('purple'); return false;"> </a></li>
 				  <li class="cyan"> <a href="" onclick="setActiveStyleSheet('cyan'); return false;"> </a></li>
 				</ul>
 				<a class="styles-open"  href="#closeoptions">  </a>
 				 <div class="styles-closed " >
-				<a href="#options"> </a>
+				<a href="#options"> </a>Contact us!
 				</div>
 			</div><!--/row-->
 				<hr>
