remember me label & checkbox

--- a/login/src/main/java/org/soluvas/web/login/DedicatedLoginPanel.html
+++ b/login/src/main/java/org/soluvas/web/login/DedicatedLoginPanel.html
@@ -8,8 +8,9 @@
 				<input class="span3" placeholder="Username" type="text" name="username" wicket:id="userName">
 				<input class="span3" placeholder="Password" type="password" name="password" wicket:id="password">
 				<br/>
-				<input style="float: left; margin-right: 10px;" type="checkbox" name="remember" wicket:id="rememberMe">
-				<label style="margin-bottom: 15px; padding-top: 5px;" class="checkbox">Remember Me</label>
+				<label style="margin-bottom: 15px; padding-top: 5px;" class="checkbox">
+					<input style="float: left; margin-right: 10px;" type="checkbox" name="remember" wicket:id="rememberMe">
+					Remember Me</label>
 				<input class="btn btn-primary btn-block" id="signIn" value="Sign In" wicket:id="login">
 				<label style="text-align:center;">or</label>
 				<a class="btn btn-primary btn-block"  href="#" wicket:id="btnLoginWithFb">Sign In with Facebook</a>
