--- a/login/src/main/java/org/soluvas/web/login/LoginPage.html
+++ b/login/src/main/java/org/soluvas/web/login/LoginPage.html
@@ -21,7 +21,7 @@
 		</div>
 		<div class="control-group">
 			<div class="controls">
-				<input wicket:id="rememberMe" type="checkbox" id="rememberMe"/><label for="rememberMe"> Remember me</label>
+				<label><input wicket:id="rememberMe" type="checkbox" id="rememberMe"/> Remember me</label>
 			</div>
 			<div class="controls">
 				<button wicket:id="login" class="btn btn-primary"><i class="icon-chevron-right icon-white"></i> Login</button>
