--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_demo.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_demo.html
@@ -45,6 +45,11 @@
 	<script src="requireConfig" wicket:id="requireConfig"></script>
 	<script wicket:id="requireJs" src="/static/js/org.soluvas.web.bootstrap/require-2.1.4.js"></script>
 	<script>define('jquery',[],function(){return jQuery});</script>
+	<script>define('bootstrap/bootstrap-collapse',[],function(){});</script>
+	<script>define('bootstrap/bootstrap-transition',[],function(){});</script>
+	<script>define('bootstrap/bootstrap-modal',[],function(){});</script>
+	<script>define('bootstrap',[],function(){});</script>
+	<script>define('bootstrap/bootstrap-dropdown',[],function(){});</script>
 
 <script>
 // TODO: refactor push support (both XHR or StompWeb-powered) to separate AMD module
