--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_venom.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_venom.html
@@ -51,21 +51,6 @@
 var subscriptions = [];
 </script>
 
-	<script type="text/javascript" > 
-	$(document).ready(function() {
-	$(".styles-open").click(function(){
-	$(".styles, .styles-open").animate({ "left":"-95px" }, 1000); $(".styles-closed").animate({ "left":"0" }, 1000);
-	return false;
-	});
-	$(".styles-closed a").click(function(){
-	$(".styles-closed").animate({ "left":"-45px" },1000);
-	$(".styles").animate({ "left":"-25px" }, 1000);
-	$(".styles-open").animate({ "left":"70" }, 1000);
-	return false;
-	});
-	}); 
-	</script>
-
 </head>
 
 <body>
@@ -135,5 +120,28 @@ var subscriptions = [];
 	<script wicket:id="pageJavaScriptSources" type="text/javascript"></script>
 
 	<script wicket:id="alexaCertifyScript">[AlexaCertifyScript]</script>
+
+<!-- must put at bottom because requires jQuery -->
+<script type="text/javascript" > 
+	$(document).ready(function() {
+	$(".styles-open").click(function(){
+	$(".styles, .styles-open").animate({ "left":"-95px" }, 1000); $(".styles-closed").animate({ "left":"0" }, 1000);
+	return false;
+	});
+	$(".styles-closed a").click(function(){
+	$(".styles-closed").animate({ "left":"-45px" },1000);
+	$(".styles").animate({ "left":"-25px" }, 1000);
+	$(".styles-open").animate({ "left":"70" }, 1000);
+	return false;
+	});
+	}); 
+</script>
+
+<script>
+  $(function () {
+    $("#nav").tinyNav();
+  });
+</script>
+
 </body>
 </html>
