FREQ-40 better looking CollectionColumnPanel

--- a/site/src/main/java/org/soluvas/web/site/widget/CollectionColumnPanel.html
+++ b/site/src/main/java/org/soluvas/web/site/widget/CollectionColumnPanel.html
@@ -2,7 +2,7 @@
 <ol style="margin-top: 0; margin-bottom: 0">
 	<li wicket:id="values"><wicket:container wicket:id="value">[value]</wicket:container></li>
 	<wicket:enclosure child="more">
-	<li style="list-style-type: none;"><strong wicket:id="more">25</strong> <span class="muted">more</span></li>
+	<li style="list-style-type: none;" class="small"><strong wicket:id="more">25</strong> <span class="muted">more</span></li>
 	</wicket:enclosure>
 </ol>
 </wicket:panel>
