--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_middea.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_middea.html
@@ -70,15 +70,9 @@ var subscriptions = [];
  	</div>
 	<div class="clearfix"></div>
 	<div class="container">
-<!-- 		    <ul class="breadcrumb"> -->
-<!-- 			    <li><a href="#">Home</a> <span class="divider">/</span></li> -->
-<!-- 			    <li><a href="#">Library</a> <span class="divider">/</span></li> -->
-<!-- 			    <li class="active">Data</li> -->
-<!-- 		    </ul> -->
 			<div class="row">
 				<div class="span12" wicket:id="contentColumn">
 					<div wicket:id="afterHeader" class="afterHeader">
-							<!-- 		Carousel Images is loading.. -->
 					</div>
 					<div wicket:id="feedback" class="feedback"></div>
 					<div class="row">
@@ -91,7 +85,7 @@ var subscriptions = [];
 						</wicket:child>
 						<div class="span3 sidebar-categories" wicket:id="sidebarColumn">
 							<div wicket:id="sidebarBlocks">[sidebarBlocks]</div>
-						</div><!--/span-->
+						</div>
 					</div>
 				</div>
 			</div><!--/row-->
