--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_middea.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_middea.html
@@ -91,7 +91,7 @@ var subscriptions = [];
 			</div><!--/row-->
 	</div><!--/.fluid-container-->
 	
-	<footer class="footer" wicket:id="footer">
+	<footer class="footerMiddea" wicket:id="footer">
 		<small style="color: #808080;"> &middot; &copy; <a href="http://www.soluvas.com/">Soluvas</a> 2012</small>
 	</footer>
 
