styling customer service tuneeca

--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_metros.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_metros.html
@@ -92,12 +92,25 @@ var subscriptions = [];
 					</wicket:child>
 				</div>
 					<div>
+						<small>
 					 	<ul class="styles">
-						  <li class="orange"><small><b>Call</b><br/>022-5228987<br/>022-70686080<br/>0815720393259<br/>082119216047<br/>087821353690</small><hr></li>
-					   	  <li class="orange"><small><b>Sms</b><br/>08112225702</small><hr></li>
-					      <li class="orange"><small><b>Bbm</b><br/>24C5DBE3</small><hr></li>
-					      <li class="orange"><small><b>Ym</b><br/>Tuneeca / CS_Tuneeca</small></li>
+						  <li><b>Call</b></li>
+						  <li>022-5228987</li>
+						  <li>022-70686080</li>
+						  <li>0815720393259</li>
+						  <li>082119216047</li>
+						  <li>087821353690</li>
+						  
+					   	  <li><b>Sms</b></li>
+					   	  <li>08112225702</li>
+					   	  <hr>
+					      <li><b>Bbm</b></li>
+					      <li>24C5DBE3</li>
+					      <hr>
+					      <li><b>Ym</b></li>
+					      <li>Tuneeca / CS_Tuneeca</li>
 						</ul>
+						</small>
 						<a class="styles-open"  href="#closeoptions">  </a>
 						 <div class="styles-closed " >
 							<a href="#options"></a>
