--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_metros.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_metros.html
@@ -94,15 +94,18 @@ var subscriptions = [];
 					<div>
 						<small>
 					 	<ul class="styles">
+					 	  <li><b>Live Chat</b></li>
+					   	  <li><span id="LiveChat_1376906919"><a href="http://www.livechatinc.com/?partner=lc_2013831">Klik disini</a></span></li>
+					   	  <hr>
+					   	  <li><b>Sms</b></li>
+					   	  <li>08112225702</li>
+					   	  <hr>
 						  <li><b>Call</b></li>
 						  <li>022-5228987</li>
 						  <li>022-70686080</li>
 						  <li>0815720393259</li>
 						  <li>082119216047</li>
 						  <li>087821353690</li>
-						  
-					   	  <li><b>Sms</b></li>
-					   	  <li>08112225702</li>
 					   	  <hr>
 					      <li><b>Bbm</b></li>
 					      <li>24C5DBE3</li>
@@ -136,6 +139,14 @@ var subscriptions = [];
 	<script wicket:id="pageJavaScriptSources" type="text/javascript"></script>
 
 	<script wicket:id="alexaCertifyScript">[AlexaCertifyScript]</script>
+	
+	<script type="text/javascript">
+	var __lc_buttons = __lc_buttons || [];
+	__lc_buttons.push({
+		elementId: 'LiveChat_1376906919',
+		skill: '0'
+	});
+	</script>
 	
 <!-- must put at the bottom because requires jQuery -->
 <script type="text/javascript" > 
