styling live chat tuneeca

--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_metros.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_metros.html
@@ -95,7 +95,7 @@ var subscriptions = [];
 						<small>
 					 	<ul class="styles">
 					 	  <li><b>Live Chat</b></li>
-					   	  <li><span id="LiveChat_1376906919"><a href="http://www.livechatinc.com/?partner=lc_2013831">Klik disini</a></span></li>
+					   	  <li><span id="LiveChat_1376906919"></span></li>
 					   	  <hr>
 					   	  <li><b>Sms</b></li>
 					   	  <li>08112225702</li>
