BC-1147 #resolve - disable imageID and color

--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/term/TermDetailPanel.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/term/TermDetailPanel.html
@@ -32,20 +32,20 @@
 							<input type="text" wicket:id="displayName"/>
 						</div>
 					</div>
-					<div class="control-group">
-						<label class="control-label" wicket:for="imageId">Image ID</label>	
-						<div class="controls">
-							<input type="text" wicket:id="imageId"/>
-						</div>
-					</div>
-					<div class="control-group">
-						<label class="control-label" wicket:for="color">HTML Color</label>	
-						<div class="controls">
-							<input type="checkbox" wicket:id="colorUsed"/>
-							<span wicket:id="colorBox" class="color-box" style="background-color: #ff0000">&nbsp;</span>
-							<input type="text" wicket:id="color"/>
-						</div>
-					</div>
+<!-- 					<div class="control-group"> -->
+<!-- 						<label class="control-label" wicket:for="imageId">Image ID</label>	 -->
+<!-- 						<div class="controls"> -->
+<!-- 							<input type="text" wicket:id="imageId"/> -->
+<!-- 						</div> -->
+<!-- 					</div> -->
+<!-- 					<div class="control-group"> -->
+<!-- 						<label class="control-label" wicket:for="color">HTML Color</label>	 -->
+<!-- 						<div class="controls"> -->
+<!-- 							<input type="checkbox" wicket:id="colorUsed"/> -->
+<!-- 							<span wicket:id="colorBox" class="color-box" style="background-color: #ff0000">&nbsp;</span> -->
+<!-- 							<input type="text" wicket:id="color"/> -->
+<!-- 						</div> -->
+<!-- 					</div> -->
 				</form>
 				<hr>
 				<div class="form-horizontal">
