--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_metros.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_metros.html
@@ -148,21 +148,39 @@ var subscriptions = [];
 	});
 	</script>
 	
-<!-- must put at the bottom because requires jQuery -->
-<script type="text/javascript" > 
-	$(document).ready(function() {
-	$(".styles-open").click(function(){
-	$(".styles, .styles-open").animate({ "left":"-140px" }, 1000); $(".styles-closed").animate({ "left":"0" }, 1000);
-	return false;
-	});
-	$(".styles-closed a").click(function(){
-	$(".styles-closed").animate({ "left":"-45px" },1000);
-	$(".styles").animate({ "left":"-25px" }, 1000);
-	$(".styles-open").animate({ "left":"114" }, 1000);
-	return false;
-	});
-	}); 
-</script>
+	<!-- must put at the bottom because requires jQuery -->
+	<script type="text/javascript" > 
+		$(document).ready(function() {
+		$(".styles-open").click(function(){
+		$(".styles, .styles-open").animate({ "left":"-140px" }, 1000); $(".styles-closed").animate({ "left":"0" }, 1000);
+		return false;
+		});
+		$(".styles-closed a").click(function(){
+		$(".styles-closed").animate({ "left":"-45px" },1000);
+		$(".styles").animate({ "left":"-25px" }, 1000);
+		$(".styles-open").animate({ "left":"114" }, 1000);
+		return false;
+		});
+		}); 
+	</script>
 	
+<!-- 	<script src="org.soluvas.web.bootstrap/easing.js" type="text/javascript"></script> -->
+	<!-- UItoTop plugin -->
+<!-- 	<script src="org.soluvas.web.bootstrap/jquery.ui.totop.js" type="text/javascript"></script> -->
+	Starting the plugin
+	
+	<script type="text/javascript">
+		$(document).ready(function() {
+			var defaults = {
+	  			containerID: 'toTop', // fading element id
+				containerHoverID: 'toTopHover', // fading element hover id
+				scrollSpeed: 1200,
+				easingType: 'linear' 
+	 		};
+			
+			$().UItoTop({ easingType: 'easeOutQuart' });
+			
+		});
+	</script>
 </body>
 </html>
