--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_metros.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_metros.html
@@ -169,18 +169,18 @@ var subscriptions = [];
 <!-- 	<script src="org.soluvas.web.bootstrap/jquery.ui.totop.js" type="text/javascript"></script> -->
 	Starting the plugin
 	
-	<script type="text/javascript">
-		$(document).ready(function() {
-			var defaults = {
-	  			containerID: 'toTop', // fading element id
-				containerHoverID: 'toTopHover', // fading element hover id
-				scrollSpeed: 1200,
-				easingType: 'linear' 
-	 		};
+<!-- 	<script type="text/javascript"> -->
+// 		$(document).ready(function() {
+// 			var defaults = {
+// 	  			containerID: 'toTop', // fading element id
+// 				containerHoverID: 'toTopHover', // fading element hover id
+// 				scrollSpeed: 1200,
+// 				easingType: 'linear' 
+// 	 		};
 			
-			$().UItoTop({ easingType: 'easeOutQuart' });
+// 			$().UItoTop({ easingType: 'easeOutQuart' });
 			
-		});
-	</script>
+// 		});
+<!-- 	</script> -->
 </body>
 </html>
