--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_metros.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_metros.html
@@ -49,7 +49,7 @@
 	<script>define('bootstrap/bootstrap-modal',[],function(){});</script>
 	<script>define('bootstrap',[],function(){});</script>
 	<script>define('bootstrap/bootstrap-dropdown',[],function(){});</script>
-
+	
 <script>
 // TODO: refactor push support (both XHR or StompWeb-powered) to separate AMD module
 var subscriptions = [];
@@ -137,7 +137,7 @@ var subscriptions = [];
 
 	<script type="text/javascript" src="something.js" wicket:id="pageJavaScriptLinks"></script>
 	<script wicket:id="pageJavaScriptSources" type="text/javascript"></script>
-
+	
 	<script wicket:id="alexaCertifyScript">[AlexaCertifyScript]</script>
 	
 	<script type="text/javascript">
@@ -147,6 +147,9 @@ var subscriptions = [];
 		skill: '0'
 	});
 	</script>
+	
+<!-- 	<script type="text/javascript" src="easing.js" ></script> -->
+<!-- 	<script type="text/javascript" src="jquery.ui.totop.js" ></script> -->
 	
 	<!-- must put at the bottom because requires jQuery -->
 	<script type="text/javascript" > 
@@ -164,23 +167,18 @@ var subscriptions = [];
 		}); 
 	</script>
 	
-<!-- 	<script src="org.soluvas.web.bootstrap/easing.js" type="text/javascript"></script> -->
-	<!-- UItoTop plugin -->
-<!-- 	<script src="org.soluvas.web.bootstrap/jquery.ui.totop.js" type="text/javascript"></script> -->
-	Starting the plugin
-	
-<!-- 	<script type="text/javascript"> -->
-// 		$(document).ready(function() {
-// 			var defaults = {
-// 	  			containerID: 'toTop', // fading element id
-// 				containerHoverID: 'toTopHover', // fading element hover id
-// 				scrollSpeed: 1200,
-// 				easingType: 'linear' 
-// 	 		};
+	<script type="text/javascript">
+		$(document).ready(function() {
+			var defaults = {
+	  			containerID: 'toTop', // fading element id
+				containerHoverID: 'toTopHover', // fading element hover id
+				scrollSpeed: 1200,
+				easingType: 'linear' 
+	 		};
 			
-// 			$().UItoTop({ easingType: 'easeOutQuart' });
+			$().UItoTop({ easingType: 'easeOutQuart' });
 			
-// 		});
-<!-- 	</script> -->
+		});
+ 	</script>
 </body>
 </html>
